--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" class="selected">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">The Team</a></li>
-				<li><a href="#">Journal</a></li>
+				<li><a href="#">Packages</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
