--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<section class="main clearfix">
 		<div class="work">
 			<a href="inner.html">
+				{% include about.html %}
 				<img src="img/work1.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
